// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelloWorld should generate output for AMAZON.CancelIntent intent 1`] = `
Array [
  Object {
    "response": Object {
      "outputSpeech": Object {
        "ssml": "<speak> Goodbye! </speak>",
        "type": "SSML",
      },
      "shouldEndSession": true,
    },
    "sessionAttributes": Object {},
    "userAgent": "ask-nodejs/1.0.25 Node/v8.9.0",
    "version": "1.0",
  },
]
`;

exports[`HelloWorld should generate output for AMAZON.HelpIntent intent 1`] = `
Array [
  Object {
    "response": Object {
      "outputSpeech": Object {
        "ssml": "<speak> This is the Hello World Sample Skill. </speak>",
        "type": "SSML",
      },
      "reprompt": Object {
        "outputSpeech": Object {
          "ssml": "<speak> Say hello, to hear me speak. </speak>",
          "type": "SSML",
        },
      },
      "shouldEndSession": false,
    },
    "sessionAttributes": Object {},
    "userAgent": "ask-nodejs/1.0.25 Node/v8.9.0",
    "version": "1.0",
  },
]
`;

exports[`HelloWorld should generate output for AMAZON.StopIntent intent 1`] = `
Array [
  Object {
    "response": Object {
      "outputSpeech": Object {
        "ssml": "<speak> See you later! </speak>",
        "type": "SSML",
      },
      "shouldEndSession": true,
    },
    "sessionAttributes": Object {},
    "userAgent": "ask-nodejs/1.0.25 Node/v8.9.0",
    "version": "1.0",
  },
]
`;

exports[`HelloWorld should generate output for HelloWorldIntent intent 1`] = `
Array [
  Object {
    "response": Object {
      "outputSpeech": Object {
        "ssml": "<speak> Hello World! </speak>",
        "type": "SSML",
      },
      "shouldEndSession": true,
    },
    "sessionAttributes": Object {},
    "userAgent": "ask-nodejs/1.0.25 Node/v8.9.0",
    "version": "1.0",
  },
]
`;

exports[`HelloWorld should generate output for LaunchRequest intent 1`] = `
Array [
  Object {
    "response": Object {
      "outputSpeech": Object {
        "ssml": "<speak> Hello World! </speak>",
        "type": "SSML",
      },
      "shouldEndSession": true,
    },
    "sessionAttributes": Object {},
    "userAgent": "ask-nodejs/1.0.25 Node/v8.9.0",
    "version": "1.0",
  },
]
`;

exports[`HelloWorld should generate output for SayHello intent 1`] = `
Array [
  Object {
    "response": Object {
      "outputSpeech": Object {
        "ssml": "<speak> Hello World! </speak>",
        "type": "SSML",
      },
      "shouldEndSession": true,
    },
    "sessionAttributes": Object {},
    "userAgent": "ask-nodejs/1.0.25 Node/v8.9.0",
    "version": "1.0",
  },
]
`;
